--- a/Concentration/Base.lproj/Main.storyboard
+++ b/Concentration/Base.lproj/Main.storyboard
@@ -170,10 +170,18 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game finished!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1zS-qK-6gE">
+                                <rect key="frame" x="101" y="437" width="174" height="34.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qOh-Gn-Qgz" secondAttribute="trailing" constant="20" id="6f8-xg-Lvk"/>
+                            <constraint firstItem="1zS-qK-6gE" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="AHA-0X-fHT"/>
+                            <constraint firstItem="1zS-qK-6gE" firstAttribute="top" secondItem="qOh-Gn-Qgz" secondAttribute="bottom" constant="21" id="E8C-tB-JYB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5XD-O7-j56" secondAttribute="bottom" constant="20" id="Ean-R8-arb"/>
                             <constraint firstItem="qOh-Gn-Qgz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="IBr-B9-hoM"/>
                             <constraint firstItem="FOx-Xt-lkN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Okt-4L-SND"/>
@@ -185,6 +193,7 @@
                     </view>
                     <connections>
                         <outlet property="flipCountLabel" destination="FOx-Xt-lkN" id="etB-Zv-WHs"/>
+                        <outlet property="gameFinishedLabel" destination="1zS-qK-6gE" id="E9R-PA-agV"/>
                         <outletCollection property="cardButtons" destination="H9h-wU-Pfa" collectionClass="NSMutableArray" id="325-BA-nIF"/>
                         <outletCollection property="cardButtons" destination="hsl-8r-8ai" collectionClass="NSMutableArray" id="PCL-df-YZI"/>
                         <outletCollection property="cardButtons" destination="Sfo-kX-Yja" collectionClass="NSMutableArray" id="G7l-2f-Mxf"/>
